<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="UDT_MachineSidebar_RD" Id="{75d2dc4c-ec14-4153-bc9b-08a8960fa167}">
    <Declaration><![CDATA[TYPE UDT_MachineSidebar_RD :
STRUCT
typeData : ARRAY[0..31] OF INT; // 按钮类型
status : ARRAY[0..31] OF Bool; // 按钮状态
click : ARRAY[0..31] OF Bool; // 按钮操作 
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>